# polymarket-btc15-bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.frontend  Dockerfile.rust  README.md  pyproject.toml
.github/workflows/: deploy-azure.yml  deploy-polyedge-active.yml  deploy-polyedge-standby.yml
crates/polyedge-api/: Cargo.toml
crates/polyedge-api/src/: history.rs  lib.rs  runtime.rs
crates/polyedge-api/src/runtime/: chart.rs  chart_history.rs  view.rs
crates/polyedge-api/tests/: smoke.rs
crates/polyedge-cli/: Cargo.toml
crates/polyedge-cli/src/: main.rs
crates/polyedge-config/: Cargo.toml
crates/polyedge-config/src/: lib.rs
crates/polyedge-domain/: Cargo.toml
crates/polyedge-domain/src/: lib.rs
crates/polyedge-engine/: Cargo.toml
crates/polyedge-engine/benches/: engine.rs
crates/polyedge-engine/src/: lib.rs
crates/polyedge-engine/tests/: parity.rs
crates/polyedge-execution/: Cargo.toml
crates/polyedge-execution/src/: lib.rs
crates/polyedge-feeds/: Cargo.toml
crates/polyedge-feeds/src/: lib.rs  util.rs
crates/polyedge-reporting/: Cargo.toml
crates/polyedge-reporting/src/: lib.rs
crates/polyedge-reporting/tests/: parity.rs
crates/polyedge-storage/: Cargo.toml
crates/polyedge-storage/src/: lib.rs
docs/: azure-deployment.md  backtesting.md  chainlink-source.md  postman.md  rust-migration-codex-guide.md  rust-shadow-status.md  strategy.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/api/realtime/: route.ts
frontend/src/components/: AppShell.tsx  Dashboard.tsx  MarketDetailPage.tsx  ReportsPage.tsx
frontend/src/components/dashboard/: useRealtimeSnapshot.ts
frontend/src/lib/: api.ts  charting.ts
infra/: main.bicep
infra/parameters/: dev.bicepparam  polyedge-standby.bicepparam
postman/: polymarket-btc15-bot.postman_collection.json  polymarket-btc15-bot.postman_environment.json
scripts/: backfill-polyedge-storage.sh  benchmark_azure_replay.py  copy-api-token-to-clipboard.sh  deploy-polyedge-standby.sh  export_rust_golden_fixtures.py
src/polyedge/: __init__.py  backtest.py  bot.py  chainlink_streams.py  config.py  execution.py  fair_value.py  main.py  market_discovery.py  math_utils.py  models.py  order_manager.py  paper_fill.py  pnl.py  polymarket_feed.py  polymarket_rtds.py  reports.py  resolution_feed.py  risk.py  source_confirmation.py  strategy.py
src/polyedge/api/: app.py  deps.py  routes_config.py  routes_control.py  routes_health.py  routes_markets.py  routes_reports.py  routes_status.py  routes_ws.py  schemas.py
src/polyedge/runtime/: __init__.py  chart_data.py  event_bus.py
src/polyedge/services/: audit.py  chart_service.py  config_models.py  config_service.py  event_service.py  snapshot.py
src/polymarket_btc15_bot/: api.py  backtest.py  bot.py  config.py  execution.py  models.py  order_manager.py  paper_fill.py  pnl.py  recorder.py  reports.py
tests/: test_api_auth.py  test_backtest.py  test_bot_paper_runtime.py  test_bot_start_price.py  test_bot_volatility.py  test_chainlink_streams.py  test_chart_data.py  test_execution.py  test_fair_value.py  test_market_discovery.py  test_math_utils.py  test_order_manager.py  test_paper_fill.py  test_pnl.py  test_polymarket_rtds.py  test_recorder.py  test_reference_aggregator.py  test_reports.py  test_risk.py  test_rust_golden_master_fixtures.py  test_strategy.py
tests/fixtures/: backtest_cancelled_maker_expected.json  events_cancelled_maker_sample.jsonl  events_pnl_sample.jsonl  pnl_report_expected.json  rust_parity_cases.json
