[package]
name = "polyedge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
percent-encoding.workspace = true
polyedge-api.workspace = true
polyedge-config.workspace = true
polyedge-domain.workspace = true
polyedge-engine.workspace = true
polyedge-reporting.workspace = true
polyedge-storage.workspace = true
quick-xml.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "polyedge-rs"
path = "src/main.rs"
