[package]
name = "polyedge-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
libm.workspace = true
polyedge-config.workspace = true
polyedge-domain.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "engine"
harness = false
