[package]
name = "polyedge-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
idna_adapter.workspace = true
percent-encoding.workspace = true
polyedge-domain.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true
url.workspace = true
tracing.workspace = true
